SERVER-17056 Consolidate data file flush and journal cleanup

(cherry picked from commit dcfc58256d43a0b9be3c697c444d0ca36084cced)