src/mongo/db/storage/mmap_v1/dur.cpp
@@ -116,9 +116,15 @@ namespace {
     boost::mutex flushMutex;
     boost::condition_variable flushRequested;
 
-    // for getlasterror fsync:true acknowledgements
-    NotifyAll::When commitNumber(0);
+    // This is waited on for getlasterror acknowledgements. It means that data has been written to
+    // the journal, but not necessarily applied to the shared view, so it is all right to
+    // acknowledge the user operation, but NOT all right to delete the journal files for example.
     NotifyAll commitNotify;
+
+    // This is waited on for complete flush. It means that data has been both written to journal
+    // and applied to the shared view, so it is allowed to delete the journal files. Used for
+    // fsync:true, close DB, shutdown acknowledgements.
+    NotifyAll applyToDataFilesNotify;
 
     // When set, the flush thread will exit
     AtomicUInt32 shutdownRequested(0);
@@ -507,7 +513,11 @@ namespace {
 
         // There is always just one waiting anyways
         flushRequested.notify_one();
-        commitNotify.waitFor(when);
+
+        // commitNotify.waitFor ensures that whatever was scheduled for journaling before this
+        // call has been persisted to the journal file. This does not mean that this data has been
+        // applied to the shared view yet though, that's why we wait for applyToDataFilesNotify.
+        applyToDataFilesNotify.waitFor(when);
 
         return true;
     }
@@ -555,9 +565,15 @@ namespace {
     void DurableImpl::syncDataAndTruncateJournal(OperationContext* txn) {
         invariant(txn->lockState()->isW());
 
+        // Once this returns, all the outstanding journal has been applied to the data files and
+        // so it's safe to do the flushAll/journalCleanup below.
         commitNow(txn);
+
+        // Flush the shared view to disk.
         MongoFile::flushAll(true);
-        journalCleanup();
+
+        // Once the shared view has been flushed, we do not need the journal files anymore.
+        journalCleanup(true);
 
         // Double check post-conditions
         invariant(!haveJournalFiles());
@@ -577,13 +593,25 @@ namespace {
 
         // There is always just one waiting anyways
         flushRequested.notify_one();
-        commitNotify.waitFor(when);
+
+        // commitNotify.waitFor ensures that whatever was scheduled for journaling before this
+        // call has been persisted to the journal file. This does not mean that this data has been
+        // applied to the shared view yet though, that's why we wait for applyToDataFilesNotify.
+        applyToDataFilesNotify.waitFor(when);
+
+        // Flush the shared view to disk.
+        MongoFile::flushAll(true);
+
+        // Once the shared view has been flushed, we do not need the journal files anymore.
+        journalCleanup(true);
+
+        // Double check post-conditions
+        invariant(!haveJournalFiles());
 
         shutdownRequested.store(1);
 
         // Wait for the durability thread to terminate
         log() << "Terminating durability thread ...";
-
         _durThreadHandle.join();
     }
 
@@ -658,7 +686,7 @@ namespace {
         }
 
         // Spawn the journal writer thread
-        JournalWriter journalWriter(&commitNotify, NumAsyncJournalWrites);
+        JournalWriter journalWriter(&commitNotify, &applyToDataFilesNotify, NumAsyncJournalWrites);
         journalWriter.start();
 
         // Used as an estimate of how much / how fast to remap
@@ -710,7 +738,7 @@ namespace {
 
                 // We need to snapshot the commitNumber after the flush lock has been obtained,
                 // because at this point we know that we have a stable snapshot of the data.
-                commitNumber = commitNotify.now();
+                const NotifyAll::When commitNumber(commitNotify.now());
 
                 LOG(4) << "Processing commit number " << commitNumber;
 
